# ChangeLog for sci-libs/plplot
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/plplot/ChangeLog,v 1.63 2015/04/20 15:31:36 jlec Exp $

*plplot-5.11.0 (20 Apr 2015)

  20 Apr 2015; Justin Lecher <jlec@gentoo.org>
  +files/plplot-5.11.0-multiarch.patch, +files/plplot-5.11.0-ocaml.patch,
  +files/plplot-5.11.0-octave.patch, +plplot-5.11.0.ebuild:
  Version Bump

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> plplot-5.10.0-r1.ebuild:
  Drop old Python implementations

  20 Mar 2015; Justin Lecher <jlec@gentoo.org> plplot-5.10.0-r1.ebuild:
  Fix tcl/tk slotting

  02 Feb 2015; Justin Lecher <jlec@gentoo.org> plplot-5.10.0-r1.ebuild,
  +files/plplot-5.10.0-cmake.patch, metadata.xml:
  Backport fix for cmake-3.10, #537670

  27 Jun 2014; Sébastien Fabbro <bicatali@gentoo.org> -plplot-5.10.0.ebuild,
  plplot-5.10.0-r1.ebuild:
  Cleanup

*plplot-5.10.0-r1 (07 Apr 2014)

  07 Apr 2014; Sébastien Fabbro <bicatali@gentoo.org>
  +files/plplot-5.10.0-have-config-h.patch, +plplot-5.10.0-r1.ebuild,
  -files/plplot-5.9.10-haru.patch, -files/plplot-5.9.10-itcltk.patch,
  -files/plplot-5.9.10-tcl86.patch, -files/plplot-5.9.10-tcltk.patch,
  -files/plplot-5.9.9-CMakeLists.txt.patch,
  -files/plplot-5.9.9-no-pdftest.patch, -files/plplot-5.9.9-tk86.patch,
  -plplot-5.9.10-r1.ebuild, -plplot-5.9.11-r1.ebuild, -plplot-5.9.9-r2.ebuild:
  Fixed conflicting macro in installed headers, bug #503076

  27 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> plplot-5.10.0.ebuild:
  Bump minimum swig version for octave bindings, thanks disperato bug #503418.
  Adjust library depedencies

*plplot-5.10.0 (21 Feb 2014)

  21 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> +plplot-5.10.0.ebuild:
  Version bump

*plplot-5.9.11-r1 (17 Jan 2014)

  17 Jan 2014; Sébastien Fabbro <bicatali@gentoo.org> +plplot-5.9.11-r1.ebuild,
  -files/plplot-5.9.11-config.patch, -plplot-5.9.11.ebuild: