@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install preinst prepare setup test
-DEPEND=ada? ( virtual/gnat:* ) cairo? ( x11-libs/cairo:0=[svg?,X?] ) gd? ( media-libs/gd:2=[jpeg?,png?] ) java? ( >=virtual/jre-1.5 ) latex? ( app-text/ghostscript-gpl virtual/latex-base ) lua? ( dev-lang/lua:0= ) ocaml? ( dev-lang/ocaml dev-ml/camlidl cairo? ( dev-ml/cairo-ocaml[gtk] ) ) octave? ( sci-mathematics/octave:0= ) pdf? ( media-libs/libharu:0= ) pdl? ( dev-perl/PDL dev-perl/XML-DOM ) python? ( dev-python/numpy[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] qt4? ( dev-python/PyQt4[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] ) ) qhull? ( media-libs/qhull:0= ) qt4? ( dev-qt/qtgui:4= dev-qt/qtsvg:4= ) shapefile? ( sci-libs/shapelib:0= ) tcl? ( dev-lang/tcl:0= dev-tcltk/itcl:0= tk? ( dev-lang/tk:0= dev-tcltk/itk ) ) truetype? ( media-fonts/freefont media-libs/lasi:0= gd? ( media-libs/gd:2=[truetype] ) ) wxwidgets? ( x11-libs/wxGTK:2.8=[X] x11-libs/agg:0=[truetype?] ) X? ( x11-libs/libX11:0= x11-libs/libXau:0= x11-libs/libXdmcp:0= ) virtual/pkgconfig java? ( >=virtual/jdk-1.5 dev-lang/swig ) ocaml? ( dev-ml/findlib ) octave? ( >=dev-lang/swig-2.0.12 ) python? ( dev-lang/swig ) test? ( media-fonts/font-misc-misc media-fonts/font-cursor-misc ) fortran? ( virtual/fortran ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost ) java? ( >=dev-java/java-config-2.1.9-r1 )
-DESCRIPTION=Multi-language scientific plotting library
-EAPI=5
-HOMEPAGE=http://plplot.sourceforge.net/
-IUSE=ada cairo cxx doc +dynamic examples fortran gd java jpeg latex lua ocaml octave pdf pdl png python qhull qt4 shapefile svg tcl test threads tk truetype wxwidgets X python_targets_python2_7 test elibc_FreeBSD java
-KEYWORDS=~amd64 ~ppc ~x86 ~amd64-linux ~x86-linux
-LICENSE=LGPL-2
-RDEPEND=ada? ( virtual/gnat:* ) cairo? ( x11-libs/cairo:0=[svg?,X?] ) gd? ( media-libs/gd:2=[jpeg?,png?] ) java? ( >=virtual/jre-1.5 ) latex? ( app-text/ghostscript-gpl virtual/latex-base ) lua? ( dev-lang/lua:0= ) ocaml? ( dev-lang/ocaml dev-ml/camlidl cairo? ( dev-ml/cairo-ocaml[gtk] ) ) octave? ( sci-mathematics/octave:0= ) pdf? ( media-libs/libharu:0= ) pdl? ( dev-perl/PDL dev-perl/XML-DOM ) python? ( dev-python/numpy[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] qt4? ( dev-python/PyQt4[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] ) ) qhull? ( media-libs/qhull:0= ) qt4? ( dev-qt/qtgui:4= dev-qt/qtsvg:4= ) shapefile? ( sci-libs/shapelib:0= ) tcl? ( dev-lang/tcl:0= dev-tcltk/itcl:0= tk? ( dev-lang/tk:0= dev-tcltk/itk ) ) truetype? ( media-fonts/freefont media-libs/lasi:0= gd? ( media-libs/gd:2=[truetype] ) ) wxwidgets? ( x11-libs/wxGTK:2.8=[X] x11-libs/agg:0=[truetype?] ) X? ( x11-libs/libX11:0= x11-libs/libXau:0= x11-libs/libXdmcp:0= ) fortran? ( virtual/fortran ) java? ( >=dev-java/java-config-2.1.9-r1 )
-REQUIRED_USE=python? ( python_targets_python2_7 ) qt4? ( dynamic ) test? ( latex ) tk? ( tcl )
-SLOT=0/12
-SRC_URI=mirror://sourceforge/plplot/plplot-5.11.0.tar.gz
-_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	5d5921a298e95441da2f85be419894c0	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	java-pkg-opt-2	f9bbbe5092225a2059aa9e6a3a2b52f1	java-utils-2	4241a8d9ed765c83041b38ac128505cd	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	7a178335dbd6ea7f50ed4e3e1c13c1e4	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86	wxwidgets	6d6eec2685256d35511e7b6d5461bec9
-_md5_=7e92a14cf709d033d63afbb215d83e43
