@@ -12,26 +12,26 @@ AUX plplot-5.9.11-octave.patch 633 SHA256 672f25cc93722d8116fb45853939b0e0b3cefa
 AUX plplot-5.9.6-python.patch 379 SHA256 a338e7b7d9893aabf0bc2e4bc5bd25a97b81674abfa40492b6cc8a33fe8763c8 SHA512 cb2022bda3d5408ef0b2dc280981ad8bdb2f7ecb20d827f7e71ce063fba60963e68aeaa5efd8eef87da8e3dc270b609f7cb342c1da175cd757c9f135173842e4 WHIRLPOOL a6ae20047cd0e99251746cadf703e19d35897a6788e5b5d665758f970cc47aad31331640a679f974455aeab4ab6ec4927649d4b1c1a9d9efbe474f2e966aed83
 DIST plplot-5.10.0.tar.gz 14766687 SHA256 d4e930b8b9d43cd1663408986218d61f166de7cbc9ef5bed111b0bdea934f9d5 SHA512 92a1880dc544694a19aa5a3f6f592df5b63ea65827f11804f0b1bdb1d123546abb213c1af4950c18b50e0e0fb9b40bb3311e7f21e681237df6008fee9873b11e WHIRLPOOL 52b726925a6fa89e2e097a1a7578b8b0004bfac6a841019144785861a467e4d7c812bf4301e7a747d2edab47ef5b0d481c7732f5b0c9b4ff5dae6be6cd3e17ba
 DIST plplot-5.11.0.tar.gz 15892751 SHA256 bfa8434e6e1e7139a5651203ec1256c8581e2fac3122f907f7d8d25ed3bd5f7e SHA512 048157b95f65858d97ca6dba15d45dcdaee11892076a949cc3de8536abcaeca88eb8fa43a0520deffeee55eba43ef8cdf86b748a1e74b86d0340b995461d704d WHIRLPOOL 904061ad556856cb2386925dc9c907a12d753de32546023c867ce77498435a0b501d36f06ca08d85adcd15cb3b93b0192fb8a58036b8faa6ce2d2b23d2cc8e43
-EBUILD plplot-5.10.0-r1.ebuild 6751 SHA256 4a91df270619cec1f887de15165015590e69a942fd69a1dc97017164a2db09d4 SHA512 7840c92fa63d2e9527dbc5dd5299e8d6ea9518b6760b835bd259cd4ca959c2433ed959acd7fe584869f9e29246b72df46960ee81b828026f314fc674ed4aa11d WHIRLPOOL 5ce3f2d728bcd206f25ff36811c8ba39c4d143ef346d94520fdb6374df40ef9e8769ecaad1880c80aaf3d8e6144e30756924a76837e4a19edbbbd68d05412957
-EBUILD plplot-5.11.0.ebuild 6709 SHA256 f9f8ec190138e2addb741c009911d72b50ccc21af78cf836f42be5aa99aa62a4 SHA512 46db0ad2a1761d9d7966e7e6cbf6b798fde7027bb4f89d2e400c0c584df64c66786c4dcd915ef3ab05f2f253157776749126a9faa9631ead45c1e711f74797dd WHIRLPOOL 621da01cf02a5fba511eede67949075d40817de282fbe555036817840978ac57ba5d04f8c3bd7b19286ac80793d2e71c13beb701fa6f799078b09ff1014576ed
-MISC ChangeLog 11811 SHA256 d1ab5d1c5f84704e68381fbb3e6445753f353d6dc79287e7b150ed27bec6d8f2 SHA512 03a77472be155f583edf9c3b0dc99ae78ef26fdcda79b76dfff895d08d3cde0803722fbeee5cf5fa587fb7f4ad73167bc0c5e676b9647e70f5b01600ad766223 WHIRLPOOL c24ad8ad0803b4055bdad0f08105ef1b80db6be1d7d772fee39278882410d884bfd8f4056dd25d14f875d52d2d14a83d585fddbd359b69d354bb0381c8132b6a
+EBUILD plplot-5.10.0-r1.ebuild 6751 SHA256 c71c5f01e988fd1e65ff2cbd009a05fb300d4cb7259c752d7a4dbbeb55f0b457 SHA512 ad6af7e7123430b5cc979c7310ec15f31187b519091693d6999cfd4c6135d8303ea5e48dd11800451b0f73466bbfbdd51587165b507ba91a02cb175c3b91e4d8 WHIRLPOOL 955aceae6739a15d7831dcf2fceed36ce0a3c57764f028a70de683532d363dcdbf5836ee13775c2b668fa59126ac9af753dbe33add1ceb2b367574eea4b2336e
+EBUILD plplot-5.11.0-r1.ebuild 6748 SHA256 9b09c4033fa00ba989128ddd7e9088e1b456f5d6af47bbbcd430230c0a4cf894 SHA512 91b3a155dfdfaf007cd8864614cc0d0a6fa54dc86fe4fbc2105e14f093d8372084847cc682e6d883f2826b8e66c35ca31b0f4036924da952f87117d6d90ec1c0 WHIRLPOOL 8190eb0fa04208201478e5ebeef427800f5668c9e2a3681fd11dc9bfe947c08eca782823562de740639d772775fc511937e3e2e52ab48f5ae1a262c76e0c33a3
+MISC ChangeLog 12092 SHA256 6b423663a17f4ca7871ff153dced2792515911af4da78b166b1b691dda8e5e8b SHA512 76b11075da4b97bb9629e82ab78e6c49eca1afbc8acab0ef2370e4b920959feef1d4f095d909d078b8b57740934f66c190c86852fb003f28b97f0a47d0183f75 WHIRLPOOL 647e585f7b39d9521afaf82b9c52977f72b9e77501b24498b832cf1d065fdab19bf3ae5fdc4474b6cb7918c1ed3d48899a7955a042aea669794705f6518710d6
 MISC metadata.xml 1429 SHA256 69a86cbfe74c03beb7603183c6e6cebe3feebd2e013008034b3a7b9e2f47174b SHA512 ac998adfee018189ffdc434c0eb24a8c1406612b17e476ccfaa648e52094cfd205ace285129d5840ef40f1aa12aaa4ffddeadbe0938769ecc67e5073ad0a4b2a WHIRLPOOL 4178e7bc90990ca48e9a03efb3cef7785d98e81558787a2c27fff61d65877d92f90ced7b34ec5be2538bd8c42a38911cfc2f217f97a241156a461e4d394341a7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.1
 
-iQJ8BAEBCgBmBQJVNRvZXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVSy0IXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir2Y8P/0IaqZmgp5pCYjKYiBiBGy+g
-tfbkSoTzdn3unJheYSWmwsQu7jGfiOfI+NQiOdWm91xyeP6nwEIlgNibjVkn/cO3
-tTzu/f8M6rLZFy0zPdj5rahhyEmO0D0xKWtAITtTCxJ9NwmlNYve49VnHbKLN2sv
-7oqbhkVyYv8W8OOF9XyjVUBIMdHOQk2IoI+vC9J1054CQtWfhHZjJog1wRCumHuO
-SqxXUrtWgdJjdLP6iVk78ApqeclDFPleCRKkV9ua8+KCnA6/qLec48OSgaijAPzE
-7ujlhMFak+eM2yak+es7dnuwLYuCDLUf1ynbJCe9bxEeB9odboqAGO7XorxEDcCb
-LIF4SWMJxPQ9BqkqiS41FSGME2C1KeACOokOZX6Rags0/C0u2ttA/y2WMhB84/aK
-o4Baws/ou2kimXOFPPKAmOHG9Igioh2ncQMBpiMIf4TrzYn7t3fyCwR56CuutQl3
-Tcx5/sZsFalVzCRWUSITfh7hImgI0VAAb6LJApGVInZtDCZMnyOU68zB0c8W8ERe
-w5nUMMEFKoEYvrgQWxOBEzsVPJq/JTt4o1GQSQiARif5WKIhaoyZtcl/JlUjAKFw
-mdvXnPeTzc6sx6cxQ7/v1YGj+FNQj2fSnttkUaNHrb4qqW+dWaf9qOSh2ReuNgmi
-SnPbFrRCzTCisU+X6GxS
-=LQRN
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirQ3gP/RX7jkdr+jFATTRc7HGdUD25
+g58Z0eyDE2aOQ+raHptCX+gpYb/em2yenu+WUYiq6n+d3eCGgxfqjXIfRQLx2C9o
+mqX/oPUnHaqvWVDAUt6V0h1f3XLQwsjEYmx6mrds04uQkEEpsAXmWPa6eP14viEz
+AakrvHgyK08Fr8ef/BMI/4D7BM8QyY8N4kTzB5Czxehvc8wUzYtmBqrGWOGCXkmw
+8bW+LOOgoDwI8VjGNgz01AsMAQBwlC2/4ay6l8GIoWtmznpAXtc3982OF1JOIcDS
+kvFS8Udhpn4B1rDWp1ObqkpXuibe1f3Pg0odr2nT8OIbEMUBehDEBBU39ALutv/a
+aj3ZjwAf9yrpK0uDplhNHtaya5yx5B0ap8Nd4wYDeXTGRm7ndmiHn4aMD8GBCL/7
+cH/JsFzNNJVj6U7mWc9qmzRhSgKUR287OBgJBZMF9GyQLb8hEZWDWX136y0Z3xDJ
+rzA93HyN3G0q+Mg7JkeEHTm7OvC+1C7VPBoWdkbA9CLWkzepSQC0ljGbe2HpvG0n
+j0k+qHwmaqyKqky0Rywp8ygoowwWIuCoyp+KXdmaliJWFSEBNQxoUXkqop70VEGz
+3DNKRwDQTINTeIOl55GrgJysO4AqpgD93V6g8HCHLh8ZbPj+fZrTEZXflS8sqVVS
+mjcGuDbIlYYLQOa5hPse
+=FWlS
 -----END PGP SIGNATURE-----
